tests/NormalTests/paczka1/fuzzy1/95982638.err
Error in line 9: R28L6xhSBas S255 46,46
Error in line 1: nvB9ESz S590 68,0
Error in line 12: nvB9ESz S733 38,4
Error in line 16: R28L6xhSBas S255 86,7
Error in line 15: nvB9ESz S664 47,0
Error in line 29: nvB9ESz S733 36,02
Error in line 26: nvB9ESz S733 21,3
